{
  "version": 4,
  "terraform_version": "0.14.6",
  "serial": 64,
  "lineage": "fcb8c699-40f1-8c10-e068-d7bc925c0c89",
  "resources": [
    {
      "module": "module.aws_vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "CNE-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:133819762848:internet-gateway/igw-09d2fc8bdad4252d3",
            "id": "igw-09d2fc8bdad4252d3",
            "owner_id": "133819762848",
            "tags": {
              "project": "CNE-Project-2"
            },
            "vpc_id": "vpc-02365063977adeb13"
          },
          "dependencies": [
            "module.aws_vpc.aws_vpc.task_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws_vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "task_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:133819762848:route-table/rtb-033e08dc59db722c9",
            "id": "rtb-033e08dc59db722c9",
            "owner_id": "133819762848",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-09d2fc8bdad4252d3",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "project": "CNE-Project-2"
            },
            "vpc_id": "vpc-02365063977adeb13"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws_vpc.aws_internet_gateway.CNE-igw",
            "module.aws_vpc.aws_vpc.task_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws_vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "CNE-rta-subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0134544f7d3b8d044",
            "route_table_id": "rtb-033e08dc59db722c9",
            "subnet_id": "subnet-0b625e7bef0883957"
          },
          "dependencies": [
            "module.aws_vpc.aws_internet_gateway.CNE-igw",
            "module.aws_vpc.aws_route_table.task_rt",
            "module.aws_vpc.aws_subnet.CNE-Pub-1",
            "module.aws_vpc.aws_vpc.task_vpc",
            "module.aws_vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.aws_vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "CNE-rta-subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e1cd2084688f7421",
            "route_table_id": "rtb-033e08dc59db722c9",
            "subnet_id": "subnet-0fd6b18f00c4f8ab8"
          },
          "dependencies": [
            "module.aws_vpc.aws_internet_gateway.CNE-igw",
            "module.aws_vpc.aws_route_table.task_rt",
            "module.aws_vpc.aws_subnet.CNE-Pub-2",
            "module.aws_vpc.aws_vpc.task_vpc",
            "module.aws_vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.aws_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "CNE-Pub-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:133819762848:subnet/subnet-0b625e7bef0883957",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0b625e7bef0883957",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "133819762848",
            "tags": {
              "project": "CNE-Project-2"
            },
            "tags_all": {
              "project": "CNE-Project-2"
            },
            "vpc_id": "vpc-02365063977adeb13"
          },
          "dependencies": [
            "module.aws_vpc.aws_vpc.task_vpc",
            "module.aws_vpc.data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.aws_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "CNE-Pub-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:133819762848:subnet/subnet-0fd6b18f00c4f8ab8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-0fd6b18f00c4f8ab8",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "133819762848",
            "tags": {
              "project": "CNE-Project-2"
            },
            "tags_all": {
              "project": "CNE-Project-2"
            },
            "vpc_id": "vpc-02365063977adeb13"
          },
          "dependencies": [
            "module.aws_vpc.aws_vpc.task_vpc",
            "module.aws_vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.aws_vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "task_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:133819762848:vpc/vpc-02365063977adeb13",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-03279b4fec441c239",
            "default_route_table_id": "rtb-0a11d684007ca9b26",
            "default_security_group_id": "sg-0587e77bb80abb7cd",
            "dhcp_options_id": "dopt-9eb48af6",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-02365063977adeb13",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0a11d684007ca9b26",
            "owner_id": "133819762848",
            "tags": {
              "project": "CNE-Project-2"
            },
            "tags_all": {
              "project": "CNE-Project-2"
            }
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.ec2_instances",
      "mode": "managed",
      "type": "aws_instance",
      "name": "CNE-Jenkins",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-096cb92bb3580c759",
            "arn": "arn:aws:ec2:eu-west-2:133819762848:instance/i-0fd3a2a8d4fcde4be",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-2a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0fd3a2a8d4fcde4be",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "TerraformPair",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0971418a81c3e7f7a",
            "private_dns": "ip-10-0-1-25.eu-west-2.compute.internal",
            "private_ip": "10.0.1.25",
            "public_ip": "52.56.146.71",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0fd8a52e4d345a3e9",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b625e7bef0883957",
            "tags": {
              "Name": "Jenkins",
              "project": "CNE-Project-2"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0d0970c73b7496d1d"
            ]
          },
          "dependencies": [
            "module.aws_vpc.aws_subnet.CNE-Pub-1",
            "module.aws_vpc.aws_vpc.task_vpc",
            "module.aws_vpc.data.aws_availability_zones.available",
            "module.security_group.aws_security_group.ssh-allowed"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.ec2_instances",
      "mode": "managed",
      "type": "aws_instance",
      "name": "CNE-Testing",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-096cb92bb3580c759",
            "arn": "arn:aws:ec2:eu-west-2:133819762848:instance/i-04083b9c2cd439aff",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-2a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-04083b9c2cd439aff",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "TerraformPair",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0fd7dca405f269b0f",
            "private_dns": "ip-10-0-1-210.eu-west-2.compute.internal",
            "private_ip": "10.0.1.210",
            "public_ip": "35.176.187.187",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-04271d05a2fa699ef",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b625e7bef0883957",
            "tags": {
              "Name": "Test-VM",
              "project": "CNE-Project-2"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0d0970c73b7496d1d"
            ]
          },
          "dependencies": [
            "module.aws_vpc.aws_subnet.CNE-Pub-1",
            "module.aws_vpc.aws_vpc.task_vpc",
            "module.aws_vpc.data.aws_availability_zones.available",
            "module.security_group.aws_security_group.ssh-allowed"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.security_group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ssh-allowed",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:133819762848:security-group/sg-0d0970c73b7496d1d",
            "description": "Open required ports for project",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d0970c73b7496d1d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20210407111551387900000001",
            "name_prefix": "terraform-",
            "owner_id": "133819762848",
            "revoke_rules_on_delete": false,
            "tags": {
              "project": "CNE-Project-2"
            },
            "timeouts": null,
            "vpc_id": "vpc-02365063977adeb13"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws_vpc.aws_vpc.task_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    }
  ]
}